<resources>
    <string name="app_name">rateTZ</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выход</string>
    <string name="save">Сохранить</string>
    <string name="apply">Применить</string>
    <string name="fav">Избранное</string>
    <string name="full">Полный список</string>
    <string name="rate">Курс</string>
    <string name="sort">Сортировка</string>
    <string name="sort_variant">Варианты сортировки</string>
    <string name="sort_currency_asc">по Алфавиту по Возрастанию</string>
    <string name="sort_currency_desc">по Алфавиту по Убыванию</string>
    <string name="sort_rate_asc">по Значению по Возрастанию</string>
    <string name="sort_rate_desc">по Значению по Убыванию</string>

    <string name="error">Ошибка</string>
    <string name="error_in">Ошибка в</string>
    <string name="error_text_unknown">Произошла непредвиденная ошибка</string>

    <string name="attention">Внимание</string>
    <string name="settings_app">В настройки приложения</string>
    <string name="need_permissions_title">Отсутствуют разрешения</string>
    <string name="need_permissions_message">Для работы приложения необходимы все запрашиваемые разрешения. Добавить отсутствующие разрешения можно в настройках приложения</string>
    <string name="internet_lose">Не удалось связаться с сервером. Проверьте подключение к Интернету</string>
    <string name="only_full_list">Только в полном списке</string>
</resources>